# emLibC

./: .cproject  .gitignore  .project  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  SConstruct  chatgpt_scons.py  library.json  makefile  simple_scons.py
common/inc/: _time.h  buffer.h  buffer_pool.h  common.h  cycle.h  device.h  eightkey.h  emLibC_options.h  endian.h  fifo.h  keyboard.h  keypad.h  memmgr.h  memory_device.h  mkeyboard.h  mutex.h  packet.h  pbuf.h  ringbuffer.h  ringbuffer_config.h  simple_test.h  slip.h  state.h  stateled.h  stream.h  terminal.h  xpad.h
common/src/: .buffer.c.kate-swp  _time.c  buffer.c  buffer_pool.c  common.c  cycle.c  device.c  eightkey.c  endian.c  fifo.c  keyboard.c  keypad.c  memmgr_flsf.c  memory_device.c  mkeyboard.c  mutex.c  packet.c  ringbuffer.c  simple_test.c  slip.c  state.c  stateled.c  stream.c  terminal.c  xpad.c
common/test/: buffer_test.cpp  buffer_test_.cpp  common_test.cpp  cycle_test.cpp  device_test.cpp  harden_test.cpp  memmgr_test.cpp  packet_test.cpp  ringbuffer_config.h  ringbuffer_test.cpp  simple_test.cpp  slip_test.cpp  state_test.cpp  test_simple.cpp
device/led/inc/: sk9822.h
device/led/src/: sk9822.c
device/stream/inc/: serial.h
device/stream/src/stm/: serial.c
doc/: Makefile  a_mkejvel.tex  buffer.tex  buffer_en.tex  buffer_pool.tex  buffer_pool_en.tex  claude_consult_1.txt  common.tex  common_en.tex  cycle.tex  cycle_en.tex  device.tex  device_en.tex  emLibC.tex  emLibC_en.tex  intro.tex  intro_en.tex  keyboard.tex  keyboard_en.tex  main.tex  main_en.tex  radio_bell.tex  serial.tex  serial_en.tex  state.tex  state_en.tex  stateled.tex  stateled_en.tex  terminal.tex  terminal_en.tex  time.tex  time_en.tex  xpad.tex  xpad_en.tex
doc/biblio/: database.bib
doc/dot/: radio_statemachine.dot
doc/pic/: Logo_SVG_in_Word.docx
port/inc/: _gpio.h  gpio.h  gpio_port.h  lgpio.h  pin.h  port.h  verr.h
port/src/: _gpio.c  gpio_port.c
port/src/stm/: gpio_port.c
port/src/stm/stm32f3/: _gpio.c  gpio.c  gpio_port.c  hal_port.h
port/src/stm/stm32f4/: _gpio.c  gpio.c  gpio_port.c  hal_port.h
port/src/stm/stm32l4/: _gpio.c  gpio.c  gpio_port.c  hal_port.h
port/src/stm32f4/: gpio.c
port/src/stm32l4/: gpio.c  hal_port.h
test/: AllTests.cpp
wire/inc/: e_i2c.h  e_spi.h  i2c.h  mSerial.h  serial.h  spi.h
wire/src/: e_i2c.c  e_spi.c  i2c.c  li2c.c  mSerial.c  serial.c  spi.c
